# DiffSim-uGUIDE

./: LICENSE  README.md  pipeline_description.json  pyproject.toml  setup.py
diffsimuguide/config/: snakebids.yml
diffsimuguide/docs/: conf.py  requirements.txt
diffsimuguide/docs/getting_started/: installation.rst
diffsimuguide/docs/usage/: app_cli.rst
diffsimuguide/workflow/: Snakefile
diffsimuguide/workflow/rules/: estimate_parameters.smk  preprocessing.smk  run_inference.smk  run_simulation.smk
diffsimuguide/workflow/scripts/: estimate_parameters.py  normalize_data.py  run_inference.py  run_simulation.py
